@@ -1,4 +1,5 @@
 UNRELEASED
+    * Fix bug `AttributeError: 'NoneType' object has no attribute 'close'` (#126)
 
 v3.12.1 (2020-08-02)
     * Fix calling opmlexport without arguments
